Opened 16 years ago

Closed 16 years ago

Last modified 16 years ago

#3752 closed bug (fixed)

CharacterMap Window is way too big.

Reported by: bga Owned by: axeld
Priority: normal Milestone: R1
Component: Applications/CharacterMap Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

hrev30138 GCC2. When I open CharacterMap its window is at least 10 times than my monitor resolution (1440x1050) in each dimension. I am pretty sure this was not intentional. :)

At least once I managed to get it to a reasonable size by clicking the window zoom button (it resized itself to be the size of my monitor resolution) but now I can not do this again. Even clicking the zoom button the window stays at its huge size.

This is 100% reproducible here and in a clean haiku install.

Attachments (2)

screenshot1.png (157.6 KB ) - added by jonas.kirilla 16 years ago.
screenshot2.png (155.7 KB ) - added by jonas.kirilla 16 years ago.

Download all attachments as: .zip

Change History (12)

comment:1 by axeld, 16 years ago

Does hrev30148 help with the issue? You may need to delete the settings file ("CharacterMap settings") to get the default size back, though.

comment:2 by luroh, 16 years ago

Nope, no change here. Fresh build, vmware.

comment:3 by mmadia, 16 years ago

I also see this on hrev30117 gcc2

comment:4 by stpere, 16 years ago

Does hrev30529 help?

comment:5 by bga, 16 years ago

Nope. I would guess that in some point in the code it is resizing itself to that huge size.

comment:6 by luroh, 16 years ago

This problem was introduced in hrev29910, fwiw.

comment:7 by jonas.kirilla, 16 years ago

Looking at CharacterMap (having zoomed it to fit the screen) the bottom and right borders look oddly borderless, as if the view could draw on those borders.

by jonas.kirilla, 16 years ago

Attachment: screenshot1.png added

by jonas.kirilla, 16 years ago

Attachment: screenshot2.png added

comment:8 by jonas.kirilla, 16 years ago

See screenshots.

comment:9 by axeld, 16 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev30629.

The problem mentioned by Jonas is an app_server problem and should be tracked in a new ticket.

in reply to:  9 comment:10 by jonas.kirilla, 16 years ago

Replying to axeld:

The problem mentioned by Jonas is an app_server problem and should be tracked in a new ticket.

Ticket: #3872

Note: See TracTickets for help on using tickets.