Make the CharacterMap start with a reasonnable window size on first launch (without saved settings). As it was before, the window took all the space it needed i.e. each section was on a single line.

Maybe a better way would be to just start it zoomed.

Maybe it fixes ticket #3752.


git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@30529 a95241bf-73f2-0310-859d-f6bbb57e9c96